--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" role="navigation" aria-label="Breadcrumb">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -34,13 +34,13 @@
     <!-- Beginning map -->
     <div id="reviews-map">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" aria-label="lcation" role="application"></div>
     </section>
   </div>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
@@ -48,6 +48,10 @@
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
+
+
+    <!--  ADD FORM TO SUBMIT REVIEW -->
+    
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
     </section>
