--- a/reviews.html
+++ b/reviews.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme_color">
+  <meta name="theme-color" content="orange">
 
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <link rel="stylesheet" href="css/responsive.css" type="text/css">
   <link rel="stylesheet" href="css/review.css" type="text/css">
+  <link rel="manifest" href="manifest.json">
+
   <title>Restaurant Reviews</title>
 </head>
 
